poja!: ZE GREAT MIGRATION HAPPENED
* poja: ZE GREAT MIGRATION HAPPENED

* chore: refactor event processing and aws integration

* feat: refactor schedulers

* fix: imports error after migration

* chore: add test env variables and reconfigure S3Client

* fix: unit tests

* chore: use beans from s3Conf

* chore(tests): migrate IT tests to use POJA test conf

* feat(tests): create test configuration with localstack

* chore: refactor uploadFile method

* chore(tests): use S3FacadeIT instead of S3AbstractContextInitializer

* chore(tests): refactor BanIT to uuse poja test configuration

* chore: disable IT tests which only should be run locally

* chore: format project

* fix: configure mocks for poja generated tests

* fix(tests): update test datas

* chore: update DirtyAccountHolderIT test datas

* chore: refactor CustomerIT assertions

* chore: refactore CalendarAuthIT and DirtyCustomerIT test datas

* chore: refactor DirtyAccountIT test datas

* chore: delete generated invoice pdf

* chore UserServiceIT.java

* chore: do not generate PDF inside DraftIT

* chore: remove DirtyTransactionIT and LiveTransactionIT and pass TransactionIT

* chore: pass CustomerIT

* chore: pass LegalFileIT

* chore: pass ProductIT

* chore: disable DraftIT

* chore: UserIT

* chore: java client deps is now bpartners-gen instead of api-rest

* chore: pass CalendarAuthIT

* chore: pass LocalInvoiceIT

* chore: pass CalendarAuthIT and SheetAuthIT

* chore: pass PaymentIT

* chore: disable InvoiceRelaunchServiceTest as scheduler is disabled

* chore: pass SogefiBuildingPermitTest

* chore: pass AccountHolderIT

* chore: pass InvoiceIT

* chore: pass ProspectRepositoryImplTest

* chore: pass read prospects

* chore: refactor ProspectService by sending mail asynchronously

* chore: pass ProspectIT

* chore: pass read_prospect_evaluation_jobs_ok

* chore: pass read_prospect_evaluation_jobs_ok

* chore: pass 