@@ -34,9 +34,10 @@ public class ProductRepositoryImpl implements ProductRepository {
     return new Order(Direction.DESC, "createdAt");
   }
 
-  private List<Order> retrieveOrders(OrderDirection descriptionOrder,
-                                     OrderDirection unitPriceOrder,
-                                     OrderDirection createdAtOrder) {
+  private List<Order> retrieveOrders(
+      OrderDirection descriptionOrder,
+      OrderDirection unitPriceOrder,
+      OrderDirection createdAtOrder) {
     List<Order> orders = new ArrayList<>();
     if (descriptionOrder != null) {
       orders.add(new Order(Direction.valueOf(descriptionOrder.getValue()), "description"));
@@ -62,48 +63,56 @@ public class ProductRepositoryImpl implements ProductRepository {
 
   @Override
   public List<Product> saveAll(String idUser, List<Product> toCreate) {
-    List<HProduct> entityToCreate = toCreate.stream()
-        .map(customer -> checkExisting(idUser, customer))
-        .map(customer -> mapper.toEntity(idUser, customer))
-        .collect(Collectors.toList());
-    return jpaRepository.saveAll(entityToCreate).stream()
-        .map(mapper::toDomain)
-        .toList();
+    List<HProduct> entityToCreate =
+        toCreate.stream()
+            .map(customer -> checkExisting(idUser, customer))
+            .map(customer -> mapper.toEntity(idUser, customer))
+            .collect(Collectors.toList());
+    return jpaRepository.saveAll(entityToCreate).stream().map(mapper::toDomain).toList();
   }
 
-  //TODO: replace to findByCriteria as in Customers
+  // TODO: replace to findByCriteria as in Customers
   @Override
   public List<Product> findByIdUserAndCriteria(
-      String idUser, ProductStatus status, Integer page, Integer pageSize,
-      OrderDirection descriptionOrder, OrderDirection unitPriceOrder,
+      String idUser,
+      ProductStatus status,
+      Integer page,
+      Integer pageSize,
+      OrderDirection descriptionOrder,
+      OrderDirection unitPriceOrder,
       OrderDirection createdAtOrder,
-      String description, Fraction unitPrice) {
+      String description,
+      Fraction unitPrice) {
     List<Order> orders = retrieveOrders(descriptionOrder, unitPriceOrder, createdAtOrder);
     Pageable pageRequest = PageRequest.of(page, pageSize, Sort.by(orders));
     String descriptionFilter = description == null ? "" : description;
     String priceFilter = unitPrice == null ? "" : String.valueOf(unitPrice);
-    List<HProduct> products = unitPrice == null
-        ? jpaRepository.findAllByIdUserAndStatusAndDescriptionContainingIgnoreCase(
-        idUser, status, descriptionFilter, pageRequest)
-        : jpaRepository.findAllByIdUserAndStatusAndUnitPriceAndDescriptionContainingIgnoreCase(
-        idUser, status, priceFilter, descriptionFilter, pageRequest);
+    List<HProduct> products =
+        unitPrice == null
+            ? jpaRepository.findAllByIdUserAndStatusAndDescriptionContainingIgnoreCase(
+                idUser, status, descriptionFilter, pageRequest)
+            : jpaRepository.findAllByIdUserAndStatusAndUnitPriceAndDescriptionContainingIgnoreCase(
+                idUser, status, priceFilter, descriptionFilter, pageRequest);
 
-    return products.stream()
-        .map(mapper::toDomain)
-        .toList();
+    return products.stream().map(mapper::toDomain).toList();
   }
 
   @Override
   public List<Product> updateStatuses(List<UpdateProductStatus> productStatuses) {
-    List<HProduct> products = productStatuses.stream()
-        .map(productStatus ->
-            jpaRepository.findById(productStatus.getId()).orElseThrow(
-                    () -> new NotFoundException(
-                        notFoundExceptionMessage(productStatus.getId())))
-                .toBuilder()
-                .status(productStatus.getStatus())
-                .build())
-        .collect(Collectors.toList());
+    List<HProduct> products =
+        productStatuses.stream()
+            .map(
+                productStatus ->
+                    jpaRepository
+                        .findById(productStatus.getId())
+                        .orElseThrow(
+                            () ->
+                                new NotFoundException(
+                                    notFoundExceptionMessage(productStatus.getId())))
+                        .toBuilder()
+                        .status(productStatus.getStatus())
+                        .build())
+            .collect(Collectors.toList());
     return jpaRepository.saveAll(products).stream()
         .map(mapper::toDomain)
         .collect(Collectors.toList());
@@ -112,24 +121,26 @@ public class ProductRepositoryImpl implements ProductRepository {
   @Override
   public Product findById(String id) {
     return mapper.toDomain(
-        jpaRepository.findById(id).orElseThrow(
-            () -> new NotFoundException(
-                notFoundExceptionMessage(id))));
+        jpaRepository
+            .findById(id)
+            .orElseThrow(() -> new NotFoundException(notFoundExceptionMessage(id))));
   }
 
   private Product checkExisting(String idUser, Product domain) {
     String id = domain.getId();
     if (id != null) {
-      jpaRepository.findById(id)
-          .orElseThrow(()
-              -> new NotFoundException(
-              notFoundExceptionMessage(id) + " for User(id=" + idUser + ")"));
+      jpaRepository
+          .findById(id)
+          .orElseThrow(
+              () ->
+                  new NotFoundException(
+                      notFoundExceptionMessage(id) + " for User(id=" + idUser + ")"));
     }
     Optional<HProduct> optionalProduct =
         jpaRepository.findByIdUserAndDescription(idUser, domain.getDescription());
-    return optionalProduct.isEmpty() ? domain : domain.toBuilder()
-        .id(optionalProduct.get().getId())
-        .build();
+    return optionalProduct.isEmpty()
+        ? domain
+        : domain.toBuilder().id(optionalProduct.get().getId()).build();
   }
 
   private String notFoundExceptionMessage(String id) {
