@@ -1,7 +1,12 @@
 package app.bpartners.api.service;
 
+import static app.bpartners.api.endpoint.event.EventProducer.Conf.MAX_PUT_EVENT_ENTRIES;
+import static app.bpartners.api.service.utils.CustomerUtils.getCustomersInfoFromFile;
+
 import app.bpartners.api.endpoint.event.EventConf;
-import app.bpartners.api.endpoint.event.model.gen.CustomerCrupdated;
+import app.bpartners.api.endpoint.event.EventProducer;
+import app.bpartners.api.endpoint.event.SesConf;
+import app.bpartners.api.endpoint.event.gen.CustomerCrupdated;
 import app.bpartners.api.endpoint.rest.mapper.CustomerRestMapper;
 import app.bpartners.api.endpoint.rest.model.CreateCustomer;
 import app.bpartners.api.endpoint.rest.model.CustomerStatus;
@@ -25,11 +30,7 @@ import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
-
-import static app.bpartners.api.endpoint.event.EventProducer.Conf.MAX_PUT_EVENT_ENTRIES;
-import static app.bpartners.api.service.utils.CustomerUtils.getCustomersInfoFromFile;
 
 @Service
 @AllArgsConstructor
@@ -42,42 +43,75 @@ public class CustomerService {
       "ID,Nom,Prénom,Email,Site web,Adresse,Code postal,Ville,Pays,Commentaire,Type";
   private final CustomerRepository repository;
   private final CustomerRestMapper restMapper;
+  private final EventProducer eventProducer;
   private final EventConf eventConf;
+  private final SesConf sesConf;
   private final BanApi banApi;
-  private final CustomerCrupdatedService customerCrupdatedService;
+
+  private static String replaceNullValue(String value) {
+    return value == null ? "" : value;
+  }
 
   public void exportCustomers(String idUser, String fileType, PrintWriter pw) {
     var customers = repository.findAllByIdUserOrderByLastNameAsc(idUser);
     pw.println(CSV_HEADERS);
-    customers.forEach(customer -> {
-      pw.println(
-          replaceNullValue(customer.getId()) + "," + replaceNullValue(customer.getLastName())
-              + "," + replaceNullValue(customer.getFirstName()) + ","
-              + replaceNullValue(customer.getEmail())
-              + "," + replaceNullValue(customer.getWebsite()) + ","
-              + replaceNullValue(customer.getAddress())
-              + "," + replaceNullValue(String.valueOf(customer.getZipCode())) + ","
-              + replaceNullValue(customer.getCity())
-              + "," + replaceNullValue(customer.getCountry()) + ","
-              + "," + replaceNullValue(customer.getComment()) + ","
-              + replaceNullValue(customer.getTranslatedType()));
-    });
+    customers.forEach(
+        customer -> {
+          pw.println(
+              replaceNullValue(customer.getId())
+                  + ","
+                  + replaceNullValue(customer.getLastName())
+                  + ","
+                  + replaceNullValue(customer.getFirstName())
+                  + ","
+                  + replaceNullValue(customer.getEmail())
+                  + ","
+                  + replaceNullValue(customer.getWebsite())
+                  + ","
+                  + replaceNullValue(customer.getAddress())
+                  + ","
+                  + replaceNullValue(String.valueOf(customer.getZipCode()))
+                  + ","
+                  + replaceNullValue(customer.getCity())
+                  + ","
+                  + replaceNullValue(customer.getCountry())
+                  + ","
+                  + replaceNullValue(customer.getComment())
+                  + ","
+                  + replaceNullValue(customer.getTranslatedType()));
+        });
   }
 
-  public List<Customer> getCustomers(String idUser, String firstName, String lastName, String email,
-                                     String phoneNumber, String city, String country,
-                                     List<String> filters, CustomerStatus status, PageFromOne page,
-                                     BoundedPageSize pageSize) {
+  public List<Customer> getCustomers(
+      String idUser,
+      String firstName,
+      String lastName,
+      String email,
+      String phoneNumber,
+      String city,
+      String country,
+      List<String> filters,
+      CustomerStatus status,
+      PageFromOne page,
+      BoundedPageSize pageSize) {
     int pageValue = page != null ? page.getValue() - 1 : 0;
     int pageSizeValue = pageSize != null ? pageSize.getValue() : 30;
     List<String> keywords = new ArrayList<>();
     if (filters != null && !filters.isEmpty()) {
-      keywords.addAll(filters.stream()
-          .map(String::toLowerCase)
-          .toList());
+      keywords.addAll(filters.stream().map(String::toLowerCase).collect(Collectors.toList()));
     }
-    return repository.findByIdUserAndCriteria(idUser, firstName, lastName, email,
-        phoneNumber, city, country, keywords, status, pageValue, pageSizeValue);
+    return repository.findByIdUserAndCriteria(
+        idUser,
+        firstName,
+        lastName,
+        email,
+        phoneNumber,
+        city,
+        country,
+        keywords,
+        status,
+        pageValue,
+        pageSizeValue);
   }
 
   public Customer getCustomerById(String id) {
@@ -88,23 +122,26 @@ public class CustomerService {
   public List<Customer> crupdateCustomers(List<Customer> customers) {
     List<Customer> saved = repository.saveAll(customers);
 
-    List<CustomerCrupdated> customerCrupdatedList = saved.isEmpty() ? List.of()
-        : saved.stream().map(customer -> {
-          User user = AuthProvider.getAuthenticatedUser();
-          return toCrupdatedEvent(user, customer, customer.isRecentlyAdded());
-        })
-        .collect(Collectors.toList());
-
-    int typedEventSize = customerCrupdatedList.size();
+    List<Object> typedEvent =
+        saved.isEmpty()
+            ? List.of()
+            : saved.stream()
+                .map(
+                    customer -> {
+                      User user = AuthProvider.getAuthenticatedUser();
+                      return toTypedEvent(user, customer, customer.isRecentlyAdded());
+                    })
+                .collect(Collectors.toList());
+    int typedEventSize = typedEvent.size();
     if (typedEventSize > MAX_PUT_EVENT_ENTRIES) {
       int subdivision = (int) Math.ceil(typedEventSize / (double) MAX_PUT_EVENT_ENTRIES);
       for (int i = 1; i <= subdivision; i++) {
         int firstIndex = i == 1 ? 0 : ((i - 1) * MAX_PUT_EVENT_ENTRIES);
         int afterLastIndex = i == subdivision ? typedEventSize : (i * MAX_PUT_EVENT_ENTRIES);
-        customerCrupdatedService.accept(customerCrupdatedList.subList(firstIndex, afterLastIndex));
+        eventProducer.accept(typedEvent.subList(firstIndex, afterLastIndex));
       }
     } else {
-      customerCrupdatedService.accept(customerCrupdatedList); //TODO: add appropriate test
+      eventProducer.accept(typedEvent); // TODO: add appropriate test
     }
 
     return saved;
@@ -124,27 +161,31 @@ public class CustomerService {
 
   public void checkCustomerExistence(Customer toCheck) {
     if (repository.findOptionalById(toCheck.getId()).isEmpty()) {
-      throw new NotFoundException(
-          "Customer(id=" + toCheck.getId() + ") not found");
+      throw new NotFoundException("Customer(id=" + toCheck.getId() + ") not found");
     }
   }
 
-  private CustomerCrupdated toCrupdatedEvent(User user, Customer customer, boolean isNew) {
-    String subject = isNew
-        ? "Ajout du nouveau client " + customer.getFullName() + " par l'artisan " + user.getName()
-        : "Modification du client existant " + customer.getFullName() + " par l'artisan "
-        + user.getName();
-    String recipientEmail = eventConf.getAdminEmail();
+  private CustomerCrupdated toTypedEvent(User user, Customer customer, boolean isNew) {
+    String subject =
+        isNew
+            ? "Ajout du nouveau client "
+                + customer.getFullName()
+                + " par l'artisan "
+                + user.getName()
+            : "Modification du client existant "
+                + customer.getFullName()
+                + " par l'artisan "
+                + user.getName();
+    String recipientEmail = sesConf.getAdminEmail();
     return new CustomerCrupdated()
         .subject(subject)
         .recipientEmail(recipientEmail)
-        .type(isNew ? CustomerCrupdated.Type.CREATE
-            : CustomerCrupdated.Type.UPDATE)
+        .type(isNew ? CustomerCrupdated.Type.CREATE : CustomerCrupdated.Type.UPDATE)
         .user(user)
         .customer(customer);
   }
 
-  @Scheduled(cron = Scheduled.CRON_DISABLED)
+  // @Scheduled(cron = Scheduled.CRON_DISABLED)
   public void updateCustomersLocation() {
     List<Customer> customers = repository.findWhereLatitudeOrLongitudeIsNull();
     int customersCount = customers.size();
@@ -152,41 +193,43 @@ public class CustomerService {
       log.warn("{} customers are to be updated on their latitude and longitude", customersCount);
     }
     StringBuilder sb = new StringBuilder();
-    customers.forEach(customer -> {
-      if (customer.getAddress() != null) {
-        try {
-          String fullAddress = customer.getFullAddress();
-          if (fullAddress.length() < 3 || fullAddress.length() > 200) {
-            sb.append(
-                String.format(
-                    "Unable to update Customer(id=%s,name=%s) position because address was %s",
-                    customer.getId(), customer.getFullName(), fullAddress));
-          } else {
-            GeoPosition position = banApi.search(fullAddress);
-            if (position == null) {
+    customers.forEach(
+        customer -> {
+          if (customer.getAddress() != null) {
+            try {
+              String fullAddress = customer.getFullAddress();
+              if (fullAddress.length() < 3 || fullAddress.length() > 200) {
+                sb.append(
+                    String.format(
+                        "Unable to update Customer(id=%s,name=%s) position because address was %s",
+                        customer.getId(), customer.getFullName(), fullAddress));
+              } else {
+                GeoPosition position = banApi.search(fullAddress);
+                if (position == null) {
+                  sb.append("Customer(id=")
+                      .append(customer.getId())
+                      .append(") location was not updated because")
+                      .append(" address ")
+                      .append(fullAddress)
+                      .append(" was not found");
+                } else {
+                  Location newLocation =
+                      Location.builder()
+                          .latitude(position.getCoordinates().getLatitude())
+                          .longitude(position.getCoordinates().getLongitude())
+                          .build();
+                  customer.setLocation(newLocation);
+                  repository.save(customer);
+                }
+              }
+            } catch (BadRequestException | NotFoundException e) {
               sb.append("Customer(id=")
                   .append(customer.getId())
-                  .append(") location was not updated because")
-                  .append(" address ")
-                  .append(fullAddress)
-                  .append(" was not found");
-            } else {
-              Location newLocation = Location.builder()
-                  .latitude(position.getCoordinates().getLatitude())
-                  .longitude(position.getCoordinates().getLongitude())
-                  .build();
-              customer.setLocation(newLocation);
-              repository.save(customer);
+                  .append(") location was not updated because ")
+                  .append(e.getMessage());
             }
           }
-        } catch (BadRequestException | NotFoundException e) {
-          sb.append("Customer(id=")
-              .append(customer.getId())
-              .append(") location was not updated because ")
-              .append(e.getMessage());
-        }
-      }
-    });
+        });
     String exceptionMessage = sb.toString();
     if (!exceptionMessage.isEmpty()) {
       log.warn(exceptionMessage);
@@ -196,9 +239,5 @@ public class CustomerService {
   @Transactional
   public List<Customer> findByAccountHolderId(String accountHolderId) {
     return repository.findByIdAccountHolder(accountHolderId);
-  }
-
-  private static String replaceNullValue(String value) {
-    return value == null ? "" : value;
   }
 }
